--- a/UnityVS.NativeParticleSystem.CSharp.csproj
+++ b/UnityVS.NativeParticleSystem.CSharp.csproj
@@ -61,5 +61,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\NativeParticleSystem.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Shader\Resources\Mobile-Particle-Alpha blended.shader" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
 </Project>
