--- a/NativePlugin/Project/Win/NativeParticleSystem.vcxproj.filters
+++ b/NativePlugin/Project/Win/NativeParticleSystem.vcxproj.filters
@@ -421,5 +421,8 @@
     <ClCompile Include="..\..\Src\Log\Log.cpp">
       <Filter>Src\Log</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Src\Input\TimeManager.cpp">
+      <Filter>Src\Input</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
